Bug 695943 - list item marker not shown in ePub
Summary: list item marker not shown in ePub
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: master
Hardware: Other All
: P4 normal
Assignee: MuPDF bugs
URL:
Keywords:
Depends on:
Blocks: 695935
  Show dependency tree
 
Reported: 2015-04-18 06:31 UTC by Pablo Rodríguez
Modified: 2015-10-06 03:11 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
ePub with different list types (3.42 KB, application/epub+zip)
2015-04-18 06:31 UTC, Pablo Rodríguez
Details
mupdf vs. ebook-viewer display (16.92 KB, image/png)
2015-04-18 06:34 UTC, Pablo Rodríguez
Details
ePub with list and no list style type defined (3.33 KB, application/epub+zip)
2015-05-20 10:54 UTC, Pablo Rodríguez
Details
mupdf and ebook-viewer display (13.31 KB, image/png)
2015-05-20 10:56 UTC, Pablo Rodríguez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo Rodríguez 2015-04-18 06:31:12 UTC
Created attachment 11603 [details]
ePub with different list types

Attached ePub contains ordered and unordered lists.

mupdf-1.7 doesn’t display the item marker in any of them.

list-style-item is the CSS property, described at http://www.w3.org/TR/CSS21/generate.html#list-style.

I’ll also attach a screenshot showing the different display from mupdf-1.7 and ebook-viewer from calibre-2.25.
Comment 1 Pablo Rodríguez 2015-04-18 06:34:16 UTC
Created attachment 11604 [details]
mupdf vs. ebook-viewer display

mupdf (on the left) vs. ebook-viewer from calibre-2.25 (on the right).
Comment 2 Pablo Rodríguez 2015-04-27 12:27:54 UTC
It has been fixed in master.

A question for the developers (especially for Tor Andersson): if I check that I bug report I filed is fixed in master, may I close the bug as RESOLVED/FIXED?

Many thanks for your help,

Pablo
Comment 3 Robin Watts 2015-04-27 17:09:33 UTC
By all means leave a note here saying that you think it's fixed, but please leave us to close the bugs. Thanks.
Comment 4 Pablo Rodríguez 2015-05-04 10:26:11 UTC
Both issues are fixed in master.

Report may be closed.
Comment 5 Pablo Rodríguez 2015-05-20 10:54:43 UTC
Created attachment 11696 [details]
ePub with list and no list style type defined

Tor,

there is an issue related to lists that I have just discovered.

When no style type is included (such as in the newly attached ePub file, list items aren’t numbered (or their numbers are wrong placed).

This is weird, since the default CSS in master includes the following line:

    ol{display:block;list-style-type:decimal;margin:1em 0;padding:0 0 0 30pt}

BTW, list item markers are missing from both numbered and unnumbered lists.

Many thanks for your help,


Pablo
Comment 6 Pablo Rodríguez 2015-05-20 10:56:18 UTC
Created attachment 11697 [details]
mupdf and ebook-viewer display

Tor,

mupdf (current master from your repo) on the left vs. ebook-viewer (from calibre-2.8) on the right displaying the previously attached ePub file.
Comment 7 Pablo Rodríguez 2015-06-01 07:10:30 UTC
Issue fixed in the following commit:

commit 274f92661e7c595185768a5c3cdd7c030bd84bb4
Author: Tor Andersson <tor.andersson@artifex.com>
Date:   Tue May 26 15:58:37 2015 +0200

    epub: Skip initial whitespace flow nodes when finding list anchors.
    
    They are skipped during layout, so should also be skipped here.
    
    Fixes bug 695943