epub: Skip initial whitespace flow nodes when finding list anchors.

They are skipped during layout, so should also be skipped here.

Fixes bug 695943.